# ac-dict-cocoa

./: CMakeLists.txt
test/: CMakeLists.txt
